--- a/slides/cap1/index.html
+++ b/slides/cap1/index.html
@@ -3,8 +3,7 @@
   <head>
     <title>Español 1.5</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Joseph V. Casillas" />
-    <script src="assets/header-attrs/header-attrs.js"></script>
+    <meta name="author" content="Juan Manuel V. Casillas" />
     <link href="assets/remark-css/hygge.css" rel="stylesheet" />
     <link href="assets/remark-css/middlebury.css" rel="stylesheet" />
     <link href="assets/remark-css/middlebury-fonts.css" rel="stylesheet" />
@@ -15,7 +14,7 @@ class: center, middle, inverse, title-slide
 
 # Español 1.5
 ## Capítulo 1
-### Joseph V. Casillas
+### Juan Manuel V. Casillas
 ### Middlebury College | Verano 2021
 
 ---
@@ -701,7 +700,6 @@ class: inverse, center, middle
 
 - Usar **estar**, **ser** en conversaciones reales (en Proctor o en alguna actividad co-curricular)
 - Estudiar el vocabulario
-
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
